Adding dummy to-do handling logic

--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/Layout/Header.razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/Layout/Header.razor
@@ -8,7 +8,7 @@
         }
         else
         {
-            <button class="mr-2 p-1 lg:hidden" @onclick="ToggleSidebar" aria-label="Toggle menu">
+            <button class="mr-2 p-1" @onclick="ToggleSidebar" aria-label="Toggle menu">
                 <i class="icon-menu text-gray-600 dark:text-gray-400 text-[20px]"></i>
             </button>
         }
