--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -9,6 +9,7 @@
 @using MarkBartha.HarvestDemo.App.Maui.Blazor
 @using MarkBartha.HarvestDemo.App.Maui.Services
 @using MarkBartha.HarvestDemo.App.Maui.Blazor.Components
+@using MarkBartha.HarvestDemo.App.Maui.Blazor.Components.Todos
 @using MarkBartha.HarvestDemo.Domain.Models
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
@@ -17,3 +18,4 @@
 @inject NavigationManager NavManager
 @* @inject IUserProfileService UserProfileService *@
 @inject AppState AppState
+
