--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
@@ -8,6 +8,7 @@
 @using MarkBartha.HarvestDemo.App.Maui
 @using MarkBartha.HarvestDemo.App.Maui.Blazor
 @using MarkBartha.HarvestDemo.App.Maui.Services
+@using MarkBartha.HarvestDemo.App.Maui.Services.Todos
 @using MarkBartha.HarvestDemo.App.Maui.Blazor.Components
 @using MarkBartha.HarvestDemo.App.Maui.Blazor.Components.Todos
 @using MarkBartha.HarvestDemo.Domain.Models
