--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Blazor/_Imports.razor
@@ -15,6 +15,10 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authorization
+@using MarkBartha.HarvestDemo.App.Maui.GraphQL
+@using MarkBartha.HarvestDemo.App.Maui.GraphQL.Components
+@using StrawberryShake
+
 @inject ExternalAuthenticationStateProvider AuthStateProvider
 @inject NavigationManager NavManager
 @* @inject IUserProfileService UserProfileService *@
