--- a/src/Backend/Themes/MarkBartha.HarvestDemo.OrchardCore.Theme/Assets/css/app.css
+++ b/src/Backend/Themes/MarkBartha.HarvestDemo.OrchardCore.Theme/Assets/css/app.css
@@ -1,3 +1,3 @@
-@import "../../../../Shared/MarkBartha.HarvestDemo.Assets/Assets/css/common.css";
+@import "../../../../../Shared/MarkBartha.HarvestDemo.Assets/Assets/css/common.css";
 
 @source "../../Views/**/*.cshtml";
